fixed bugs, added example files to the resource directory, removed the Application class, updated the methods of the ShopServiceImpl class