@@ -1,14 +1,15 @@
 package core.basesyntax;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
+import java.nio.file.Paths;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
 import service.ReaderService;
 import service.impl.ParseServiceImpl;
 import service.impl.ReaderServiceImpl;
@@ -16,95 +17,79 @@ import service.impl.ReaderServiceImpl;
 public class ReadFileTest {
     private static ReaderService readerService;
 
-    @TempDir
-    private Path tempDir;
-
     @BeforeEach
-    void create() throws IOException {
-        Path inputFile = tempDir.resolve("reportToRead.csv");
-        List<String> list = List.of("operation,fruit,quantity", "b,banana,100", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Files.write(inputFile, list);
+    void create() {
         ParseServiceImpl parseService = new ParseServiceImpl();
         readerService = new ReaderServiceImpl(parseService);
-
     }
 
     @Test
-    void readFromFile_withEmptyFile_throwsException() throws IOException {
-        List<String> result = List.of();
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, result);
+    void readFromFile_andWriteFile() throws IOException {
+        String fileException = getResourcePath("FileException.csv");
+        String[] args = new String[] {getResourcePath("validData.csv"),
+                getResourcePath("validDataActual.csv")};
+        RunArgument.processArgumentsAndRun(args);
+        assertEquals(Files.readString(Path.of(fileException)).trim(),
+                Files.readString(Path.of(args[1])).trim());
+    }
+
+    @Test
+    void readFromFile_withEmptyFile_throwsException() {
+        String filePath = getResourcePath("emptyFile.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
-    void nameIsEmpty() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b,banana,100", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
-        assertThrows(RuntimeException.class, () -> readerService.readFromFile(""));
-    }
-
-    @Test
-    void readFromFile_withEmptyLine_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "", "b,banana,100", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+    void readFromFile_withEmptyLine_throwsException() {
+        String filePath = getResourcePath("emptyLine.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
-    void readFromFile_withInvalidFieldCount_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b,banana", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+    void readFromFile_withInvalidFieldCount_throwsException() {
+        String filePath = getResourcePath("invalidFieldCount.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
-    void readFromFile_withInvalidOperationCode_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b,banana,100", "h,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+    void readFromFile_withInvalidOperationCode_throwsException() {
+        String filePath = getResourcePath("invalidOperationCode.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
-    void readFromFile_withEmptyFruit_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b, ,100", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+    void readFromFile_withEmptyFruit_throwsException() {
+        String filePath = getResourcePath("emptyFruit.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
-    void readFromFile_withNegativeQuantity_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b,banana,-200", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+    void readFromFile_withNegativeQuantity_throwsException() {
+        String filePath = getResourcePath("negativeQuantity.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
     }
 
     @Test
     void readFromFile_withZeroQuantity_throwsException() throws IOException {
-        List<String> list = List.of("operation,fruit,quantity", "b,banana,0", "s,banana,60",
-                "p,banana,10", "r,banana,2", "b,apple,80", "s,apple,20", "p,apple,10");
-        Path testFile = tempDir.resolve("testFile.csv");
-        Files.write(testFile, list);
+        String filePath = getResourcePath("zeroQuantity.csv");
         assertThrows(IllegalArgumentException.class, () -> readerService
-                .readFromFile(testFile.toString()));
+                .readFromFile(filePath));
+    }
+
+    public String getResourcePath(String fileName) {
+        try {
+            return Paths.get(this.getClass().getClassLoader()
+                .getResource(fileName)
+                .toURI())
+                .toString();
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
